# Harware-finder

./: .gitignore  CMakeLists.txt  README.md  dockerfile
src/: CMakeLists.txt  HWI.cpp  HWI.h  main.cpp  wmi_api.cpp  wmi_api.h
